--- a/foundation/accesscontrol/templates/accesscontrol/register.html
+++ b/foundation/accesscontrol/templates/accesscontrol/register.html
@@ -142,7 +142,7 @@
                         <label for="rg-phone" class="col-sm-5 col-md-4">{% trans "Phone number" %} <span
                                 style="font-weight: normal">(Optional)</span></label>
                         <div class="col-sm-6 col-md-6">
-                            <input id="rg-phone" class="form-control input-sm phone" type="text" name="phone"/>
+                            <input id="rg-phone" class="form-control input-sm phone" type="text" name="phone" value=""/>
                             {{ register_form.phone.errors }}
                         </div>
                     </div>
