--- a/foundation/core/templates/core/configuration.html
+++ b/foundation/core/templates/core/configuration.html
@@ -13,6 +13,10 @@
         #context-search {clear: both; margin: 10px 0 6px 0;}
         #context-search input {width: 270px}
         #stage section {box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15)}
+
+        #banner h2 {
+            margin-top: 210px
+        }
     </style>
 {% endblock %}
 
