--- a/foundation/accesscontrol/templates/accesscontrol/events/access_request.html
+++ b/foundation/accesscontrol/templates/accesscontrol/events/access_request.html
@@ -4,7 +4,7 @@
         {% if rq.member.photo and rq.member.photo.name %}
             <div class="img" style="background-image: url({{ rq.member.photo.small_url }})"></div>
         {% else %}
-            <div class="img" style="{% static 'ikwen/img/login-avatar.jpg' %}"></div>
+            <div class="img" style="background-image: url({% static 'ikwen/img/login-avatar.jpg' %})"></div>
         {% endif %}
         <p style="margin-top: 5px">{{ rq.member.full_name|truncatewords:2 }}</p>
     </a>
