--- a/foundation/core/templates/core/snippets/banner_and_pp_uploader.html
+++ b/foundation/core/templates/core/snippets/banner_and_pp_uploader.html
@@ -9,7 +9,7 @@
                 buttonText: title,
                 multiple: false,
                 onSubmit: function () {
-                    $(selector + ' .progress-bar').width(0);
+                    $(selector + ' + .progress .progress-bar').width(0);
                     $(selector + ' + .progress').css('visibility', 'visible');
                 },
                 onProgress: function (id, fileName, loaded, total) {
