--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -104,7 +104,14 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 .text-has-shade {text-shadow: 1px 2px 2px rgba(0, 0, 0, .7)}
 .inner-shade {box-shadow: inset 0 1px 3px rgba(0, 0, 0, .15);}
 .subtle-shade {box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15);}
-#navbar {height: 47px; min-height: 47px;position: fixed;width: 100%;top: 0;}
+
+#navbar {
+    height: 47px;
+    min-height: 47px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
 #navbar .navbar-brand {padding: 12px 15px}
 #navbar .navbar-header {float: left}
 #navbar form.search {display: none; float: left; margin: 15px 0 0 200px}
@@ -121,7 +128,9 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 }
 #navbar ul.navbar-right > li > a {padding: 10px}
 @media (max-width: 992px) {
-    #navbar {margin-bottom: 0}
+    #navbar {
+        margin-bottom: 0;
+    }
     #content.container {padding: 47px 0 0;width: 100%;}
 }
 @media (min-width: 768px) {
