- successfulRegistration GET parameter added on redirection url upon registration - error image added on 404.html and 500.html

--- a/foundation/accesscontrol/templates/accesscontrol/profile.html
+++ b/foundation/accesscontrol/templates/accesscontrol/profile.html
@@ -121,7 +121,7 @@
                     <section id="about" class="subtle-shade">
                         {% if is_company and page_config.short_description %}
                             {% if page_config.description %}
-                                <p style="color: #666; font-size: 18px; margin-bottom: 20px">{{ page_config.description }}</p>
+                                <p style="color: #666; font-size: 18px; margin-bottom: 20px; text-align: justify">{{ page_config.description }}</p>
                             {% else %}
                                 <p style="color: #666; font-size: 18px; margin-bottom: 20px">{{ page_config.short_description }}</p>
                             {% endif %}
