--- a/foundation/core/templates/core/500.html
+++ b/foundation/core/templates/core/500.html
@@ -21,7 +21,7 @@
         <div id="content" class="container">
             <div style="margin-top: 10%; text-align: center">
                 {# TODO: Create a custom 500 icon #}
-                <img src="{% static 'ikwen/img/ikwen-404.png' %}" height="250"/>
+                <img src="{% static 'ikwen/img/page-error.png' %}" height="250"/>
                 <div style="padding-top: 30px; text-align: center">
                     <h2>Error 500. Server issue. Please try again later</h2>
                 </div>
