--- a/foundation/core/templates/core/configuration.html
+++ b/foundation/core/templates/core/configuration.html
@@ -63,8 +63,7 @@
                     <h2 class="text-has-shade">{{ config.full_name }}</h2>
                 </div>
             </header>
-            {% url 'ikwen:configuration' as configuration_url %}
-            <form id="configuration" class="admin-form" method="post" action="{{ configuration_url|append_auth_tokens:request }}">{% csrf_token %}
+            <form id="configuration" class="admin-form" method="post" action="{{ request.META.path }}">{% csrf_token %}
                 <input type="hidden" name="id" value="{{ config.id }}" />
                 <input type="hidden" name="company_name_slug" value="{{ config.company_name_slug }}" />
                 {% include 'core/snippets/model_admin_form.html' %}
